--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,8 @@
 fastapi==0.100.0
 hypercorn==0.14.4
+redis==5.0.1
+crewai==0.28.8
+pydantic==2.5.0
+pandas==2.1.4
+python-dateutil==2.8.2
+httpx==0.25.2
