--- a/requirements.txt
+++ b/requirements.txt
@@ -6,3 +6,11 @@ pydantic==2.5.0
 pandas==2.1.4
 python-dateutil==2.8.2
 httpx==0.25.2
+celery==5.3.4
+celery[redis]==5.3.4
+shapely==2.0.4
+pyyaml==6.0.1
+pytest==8.3.4
+pytest-asyncio==0.24.0
+pytest-mock==3.14.0
+python-dotenv==1.0.0
