--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ httpx==0.27.1
 celery==5.3.4
 celery[redis]==5.3.4
 shapely==2.0.4
+geopandas>=0.14.4
 pyyaml==6.0.1
 pytest==8.3.4
 pytest-asyncio==0.24.0
